--- a/Portfolio-Website-Template/index.html
+++ b/Portfolio-Website-Template/index.html
@@ -596,6 +596,8 @@
   <script src="js/aos.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
+  <script defer src="/_vercel/insights/script.js"></script>
+
   
   <script src="js/main.js"></script>
     
