--- a/Portfolio-Website-Template/index.html
+++ b/Portfolio-Website-Template/index.html
@@ -437,8 +437,8 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">AB Testing Regression Analysis</a></h3>
+				  <p>AB Testing, Hypothesis testing and Regression Analysis used to Analysis marketing agency, primary objective is to maximize the return on investment (ROI) for our clients' advertising campaigns.</p>
 				</div>
 			  </div>
 			</div>
