--- a/Portfolio-Website-Template/index.html
+++ b/Portfolio-Website-Template/index.html
@@ -437,7 +437,7 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">AB Testing Regression Analysis</a></h3>
+				  <h3 class="heading"><a href="https://github.com/Kuldeep225301/AB_Testing_Regression_Analysis/blob/main/AB%20Testing%20Analysis.ipynb">AB Testing Regression Analysis</a></h3>
 				  <p>AB Testing, Hypothesis testing and Regression Analysis used to Analysis marketing agency, primary objective is to maximize the return on investment (ROI) for our clients' advertising campaigns.</p>
 				</div>
 			  </div>
