--- a/Portfolio-Website-Template/index.html
+++ b/Portfolio-Website-Template/index.html
@@ -438,7 +438,9 @@
 				<div class="text mt-3 float-right d-block">
   
 				  <h3 class="heading"><a href="https://github.com/Kuldeep225301/AB_Testing_Regression_Analysis/blob/main/AB%20Testing%20Analysis.ipynb">AB Testing Regression Analysis</a></h3>
-				  <p>AB Testing, Hypothesis testing and Regression Analysis used to Analysis marketing agency, primary objective is to maximize the return on investment (ROI) for our clients' advertising campaigns.</p>
+				  <p>A statistical project focused on A/B testing and regression analysis. Learn how marketing 
+agencies use experiments to identify the best-performing platform for ads and predict 
+conversions post-selection.</p>
 				</div>
 			  </div>
 			</div>
