--- a/Portfolio-Website-Template/index.html
+++ b/Portfolio-Website-Template/index.html
@@ -264,9 +264,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With over 5 Months of comprehensive experience in the field of data science & analytics, accompanied by a bachelor's degree in engineering. 
-									Proficient in data analysis, statistical analysis, hypothesis testing, customer behaviour analysis, &amp; machine learning. 
-									Demonstrated success in leading impactful projects.</p>
+								<p>With over 5 Months of professional experience, I have acquired valuable knowledge and skills through my academic pursuits. My coursework and projects have provided me with a comprehensive understanding of Database Management Systems, Programming Languages Proficiency, and Statistical Analysis including Hypothesis Testing and regression Analysis. I am proficient in SQL, and Python and have hands-on experience with data analysis, data cleaning and manipulation, and visualization. I am confident in my ability to effectively utilize these skills to uncover insights and drive data-informed decision-making</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Analyst</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>
