--- a/Portfolio-Website-Template/index.html
+++ b/Portfolio-Website-Template/index.html
@@ -416,11 +416,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/ola-cabs.jpg');">
+              <a href="https://github.com/Kuldeep225301/Hospital-Management-Dashboard" class="block-20 zoom-effect" style="background-image: url('images/Hospital_image.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Kuldeep225301/Ola-Project">Power BI  dashboard </a></h3>
+                <h3 class="heading"><a href="https://github.com/Kuldeep225301/Hospital-Management-Dashboard">Power BI  dashboard Using SQL and Power BI  </a></h3>
                 <p>Designed a power bi dashboard Throughout this project, i've acquire crucial data analytics skills and understand the workflow of a complete data project, from raw data to compelling visualization.</p>
               </div>
             </div>
